--- a/assets/pages/adventure.html
+++ b/assets/pages/adventure.html
@@ -14,7 +14,7 @@
         <div class="header_wrapper">
           <div class="header_wrappers">
             <img src="../images/Game_logos.png" alt="" class="header_logo" />
-            <h1 class="header_title">GAME CATEGORY</h1>
+            <h1 class="header_title">GAME COMPANY</h1>
           </div>
           <nav>
             <ul class="header_list">
