--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="header_wrapper">
                 <div class="header_wrappers">
                     <img src="./assets/images/Game_logos.png" alt="" class="header_logo">
-                    <h1 class="header_title">GAME CATEGORY</h1>
+                    <h1 class="header_title">GAME COMPANY</h1>
                 </div>
                 <nav>
                     <ul class="header_list">
