--- a/assets/pages/shooter.html
+++ b/assets/pages/shooter.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Adventure</title>
-    <link rel="stylesheet" href="../css/adventure.css" />
+    <title>Shooters</title>
+    <link rel="stylesheet" href="../css/shooters.css" />
   </head>
 
   <body>
@@ -19,8 +19,8 @@
           <nav>
             <ul class="header_list">
               <a href="/index.html" class="header_li">Action</a>
-              <a href="#" class="header_lis">Adventure</a>
-              <a href="../pages/shooter.html" class="header_li">Shooters</a>
+              <a href="./adventure.html" class="header_li">Adventure</a>
+              <a href="#" class="header_lis">Shooters</a>
               <li class="header_li">Puzzles</li>
             </ul>
           </nav>
@@ -31,57 +31,74 @@
     <main>
       <section class="hades">
         <div class="container">
-          <h2 class="hades_title">L.A.Noire</h2>
+          <h2 class="hades_title">Call of duty: Modern Warfare</h2>
           <div class="hades_wrapper">
             <div class="hades_logo_s">
-              <img class="hades_logo" src="../images/L.a.f.jfif" alt="" />
-              <img src="../images/LALC.jpg" alt="" class="hades_logo_Ss" />
+              <img
+                class="hades_logo"
+                src="../images/FEWEDEDEdEDEDEdE.jpeg"
+                alt=""
+              />
+              <img
+                src="../images/Call of duty.jpeg"
+                alt=""
+                class="hades_logo_Ss"
+              />
             </div>
             <p class="hades_suptitle">
-              L.A. Noire — компьютерная игра в жанре action-adventure,
-              разработанная австралийской студией Team Bondi и выпущенная
-              издательством Rockstar Games 17 мая 2011 года на PlayStation 3 и
-              Xbox 360. 23 июня 2011 года было заявлено, что игра выйдет на ПК
-              осенью 2011 года. Игра вышла на ПК в России 11 ноября 2011 г.
+              Call of Duty: Modern Warfare — компьютерная игра в жанре шутер от
+              первого лица, разработанная Infinity Ward и изданная Activision.
+              Выход состоялся 25 октября 2019 года. Игра является перезапуском
+              подсерии Modern Warfare, а также шестнадцатым проектом во
+              франшизе.
             </p>
           </div>
         </div>
       </section>
       <section class="hades">
         <div class="container">
-          <h2 class="hades_title">The walking dead</h2>
+          <h2 class="hades_title">Counter Strike:2</h2>
           <div class="hades_wrapper">
             <div class="hades_logo_s">
-              <p class="hades_suptitles">
-                The Walking Dead: The Game — эпизодическая графическая
-                приключенческая игра по мотивам комикса Роберта <br />
-                Киркмана «Ходячие мертвецы». Игра разработана и издана студией
-                Telltale Games. <br />
-                Изначально выход планировался на последние месяцы 2012 года.
-                <br />
-                Позже релиз The Walking Dead: The Game перенесли на 24 апреля
-                2012 года
+              <p class="hades_suptitle">
+                Counter-Strike 2 — компьютерная игра в жанре
+                многопользовательского тактического шутера от первого лица,
+                разработанная компанией Valve. Она стала 5-й игрой в серии
+                Counter-Strike и заявляется как бесплатное обновление к Global
+                Offensive.
               </p>
-              <img src="../images/SER.jfif" alt="" class="hades_logo_Ss" />
+              <img
+                src="../images/Counter strike 2.jpeg"
+                alt=""
+                class="hades_logo_Ss"
+              />
             </div>
 
-            <img class="hades_logoz" src="../images/SVS.jfif" alt="" />
+            <img
+              class="hades_logo"
+              src="../images/Moment for cs2.jpeg"
+              alt=""
+            />
           </div>
         </div>
       </section>
       <section class="hades">
         <div class="container">
-          <h2 class="hades_title">Fahrenheit</h2>
+          <h2 class="hades_title">PUBG: BATTLEGROUNDS</h2>
           <div class="hades_wrapper">
             <div class="hades_logo_s">
-              <img class="hades_logo" src="../images/FER.jfif" alt="" />
-              <img src="../images/EFTR.jfif" alt="" class="hades_logo_Ss" />
+              <img class="hades_logo" src="../images/pubg.jpeg" alt="" />
+              <img
+                src="../images/Pubg moment.jpeg"
+                alt=""
+                class="hades_logo_Ss"
+              />
             </div>
             <p class="hades_suptitle">
-              Fahrenheit, в США и Канаде была издана под названием Indigo
-              Prophecy — приключенческая компьютерная игра, разработанная
-              французской студией Quantic Dream и выпущенная компанией Atari для
-              PlayStation 2, Windows и Xbox в сентябре 2005 года
+              PUBG: Battlegrounds — многопользовательская онлайн-игра в жанре
+              королевской битвы, разрабатываемая и издаваемая студией PUBG
+              Corporation, дочерней компанией корейского издателя Krafton, ранее
+              известного как Bluehole.
             </p>
           </div>
         </div>
@@ -95,30 +112,42 @@
           </p>
           <div class="content_wrapper">
             <div class="content_box">
-              <img class="content_foto1" src="../images/LALC.jpg" alt="" />
+              <img
+                class="content_foto1"
+                src="../images/Call of duty.jpeg"
+                alt=""
+              />
               <div class="content_text_wrapper">
                 <p class="content_title_text">
-                  By <strong>L.A.Noire</strong> | 03 March 2019
+                  By <strong>Roguelike</strong> | 03 March 2019
                 </p>
-                <button class="content_btn">buy $3.45</button>
+                <button class="content_btn">free</button>
               </div>
             </div>
             <div class="content_box">
-              <img class="content_foto1" src="../images/SVS.jfif" alt="" />
+              <img
+                class="content_foto1"
+                src="../images/Moment for cs2.jpeg"
+                alt=""
+              />
               <div class="content_text_wrapper">
                 <p class="content_title_text">
-                  By <strong>The walking dead</strong> | 03 March 2019
+                  By <strong>Gareth Coker</strong> | 03 March 2019
                 </p>
-                <button class="content_btn">buy $29.42</button>
+                <button class="content_btn">free</button>
               </div>
             </div>
             <div class="content_box">
-              <img class="content_foto1" src="../images/EFTR.jfif" alt="" />
+              <img
+                class="content_foto1"
+                src="../images/Pubg moment.jpeg"
+                alt=""
+              />
               <div class="content_text_wrapper">
                 <p class="content_title_text">
-                  By <strong>Fahrenheit</strong> | 03 March 2019
+                  By <strong>Gaijin Entertainment</strong> | 03 March 2019
                 </p>
-                <button class="content_btn">buy $3.97</button>
+                <button class="content_btn">free</button>
               </div>
             </div>
           </div>
@@ -166,14 +195,14 @@
               <input
                 type="text"
                 class="footer_input"
-                placeholder="Enter your email,gmail"
+                placeholder="Enter your phone Number"
               />
               <button type="submit" class="footer_btn">Sign in Now</button>
             </div>
           </form>
         </div>
         <p class="footer_title_suptitle_text_wrapper_list_li_flexing">
-          Game information the https://gamer-info.com/
+          Made With Love By Figmaland All Right Reserved
         </p>
       </div>
     </footer>
