--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <ul class="header_list">
                         <a href="#" class="header_lis">Action</a>
                         <a href="./assets/pages/adventure.html" class="header_li">Adventure</a>
-                        <li class="header_li">Shooters</li>
+                        <a href="./assets/pages/shooter.html" class="header_li">Shooters</a>
                         <li class="header_li">Puzzles</li>
                     </ul>
                 </nav>
